--- a/index_dont_show_auto.html
+++ b/index_dont_show_auto.html
@@ -4,9 +4,9 @@
 <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Document</title>
 
-<link href="style.css" rel="stylesheet" type="text/css">
+<link href="style.css" rel="stylesheet" type="text/css" />
 
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+<!--<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">-->
 
 <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 
@@ -14,7 +14,7 @@
 <table>
 <header>
     <!--Information highlighting my professional background with use of headers 1-6 and semantic structuring-->
-    <h1>Jonathan Whitman</h1>
+    <h1 class="heading">Jonathan Whitman</h1>
     <img src="https://media.licdn.com/dms/image/D4E03AQF4pJy7LogGVw/profile-displayphoto-shrink_400_400/0/1697385113993?e=1708560000&v=beta&t=G5AaUF5CqkVoTvQX3U9USkGxkyd07dzcp_rA6UnlBJc">
     <a href="https://www.linkedin.com/in/jonathan-whitman-34a845155/">
         Software Engineer</a>
@@ -23,7 +23,7 @@
             <section>
                 <!--List of my interests and what I want to accomplish as a Software Engineer-->
                 <table>
-                    <caption>My interests and goals as a Software Enginner</caption>
+                    <caption id="Highlight">My interests and goals as a Software Engineer</caption>
                     <thead>
                     <th>Interests</th>
                     <th>Interests' Goals</th>
@@ -51,27 +51,27 @@
 </header>
 <main>          <!--Information about my most current position-->
     <section>
-       <h2>Experience</h2>
-            <h3>IT Automation Engineer</h3>
-            <h4>Force99, LLC </h4>
-                <h5>52 Communications Squadron Spangdahlem, Germany</h5> 
-                    <h6>Present</h6>
+       <h2 class="heading2">Experience</h2>
+            <h3 class="heading2">IT Automation Engineer</h3>
+            <h4 class="heading2">Force99, LLC </h4>
+                <h5 class="heading2">52 Communications Squadron Spangdahlem, Germany</h5> 
+                    <h6 class="heading2">Present</h6>
                     <p>Responsible in supporting enduring projects requiring the ability to 
                         technically analyze plans throughout the project lifecycle for feasibility, 
                         integrity, and effectiveness.</p>
-        <h3>Linux System Administrator</h3>
+        <h3 class="heading3">Linux System Administrator</h3>
         <!--Brief description of my last postion-->
-            <h4>U.S.Army</h4>
-                <h5>Regional Cyber Center _ Europe Arcyber Netcom Wiesbaden, Germany</h5>
-                    <h6>April 2021 - November 2023</h6>
+            <h4 class="heading3">U.S.Army</h4>
+                <h5 class="heading3">Regional Cyber Center _ Europe Arcyber Netcom Wiesbaden, Germany</h5>
+                    <h6 class="heading3">April 2021 - November 2023</h6>
                         <p>Responsible for troubleshooting UNIX and DNS enterprise servers, service 
                             performances, and network issues, negatively impacting end user systems 
                             experience.</p>
         <!--Brief description of my past experience-->
-        <h3>Configuration Management and Technical Documentation Support Specialist II</h3>
-        <h4>Perspecta Global Solutions (Peraton)</h4>
-                <h5>Regional Cyber Center - Europe Arcyber Netcom Wiesbaden, Germany</h5>
-                    <h6>June 2020 - April 2021</h6>
+        <h3 class="heading4">Configuration Management and Technical Documentation Support Specialist II</h3>
+        <h4 class="heading4">Perspecta Global Solutions (Peraton)</h4>
+                <h5 class="heading4">Regional Cyber Center - Europe Arcyber Netcom Wiesbaden, Germany</h5>
+                    <h6 class="heading4">June 2020 - April 2021</h6>
                         <p>Maintained and updated a government accessible listing or database of all 
                             software maintenance agreements to include at a minimum product name, 
                             quantity, cost, agreement start and end dates, and expiration dates. Drafted 
@@ -79,10 +79,10 @@
                             contains equipment that is six months from End of Life (EOL) or End of 
                             Support (EOS).</p>
         <!--Brief description of my past experience-->
-        <h3>Information Technology Specialist</h3>
-            <h4>U.S. Army</h4>
-                <h5>Regional Cyber Center - Europe Arcyber Netcom Wiesbaden, Germany</h5>
-                    <h6>September 2015 - May 2020</h6>
+        <h3 class="heading5">Information Technology Specialist</h3>
+            <h4 class="heading5">U.S. Army</h4>
+                <h5 class="heading5">Regional Cyber Center - Europe Arcyber Netcom Wiesbaden, Germany</h5>
+                    <h6 class="heading5">September 2015 - May 2020</h6>
                         <p>Executed network monitoring using IT Remedy and Splunk (co-existing with 
                             other network monitoring devices) to issue reports in a timely manner and 
                             continued to analyze and evaluate voice and data network performance to 
@@ -90,7 +90,7 @@
      </section>
                          <!--Description of my educational history with the use of ul-->
     <section>
-    <h2>Education</h2>
+    <h2 class="heading">Education</h2>
     <ul>
         <li>Bachelor's Degree in Computer Networks and Cybersecurity</li>
         <li>Comptia Security plus Certification</li>
@@ -102,7 +102,7 @@
 </section>    
     <!--Brief highlights of my skill with use of ol-->
     <section>
-    <h2>Skills</h2>
+    <h2 class heading>Skills</h2>
        <ol>
         <li>Organized</li>
         <li>Willing</li>
@@ -129,17 +129,17 @@
 
 
     <label> If interested or need more information, please contact me:</label><br>
-    <input name="Name" type="text" placeholder="Last, First, MI." maxlength="25" minlength="1" required>
-    <input name="user-email" type="email" placeholder="Email Address" maxlength="25" minlength="1" required>
-    <input name="Phone" type="tel" placeholder="Contact Number" maxlength="25" minlength="1" required>
-    <input name="Method" type="text" placeholder="Preferred method of contact" maxlength="25" minlength="1" required>
-    <input name="Message" type="textarea" placeholder="Message" maxlength="300" minlength="1">
+    <input name="Name" class="inputbox" type="text" placeholder="Last, First, MI." maxlength="25" minlength="1" required>
+    <input name="user-email" class="inputbox" type="email" placeholder="Email Address" maxlength="25" minlength="1" required>
+    <input name="Phone" class="inputbox" type="tel" placeholder="Contact Number" maxlength="25" minlength="1" required>
+    <input name="Method" class="inputbox" type="text" placeholder="Preferred method of contact" maxlength="25" minlength="1" required>
+    <input name="Message" class="inputbox" type="textarea" placeholder="Message" maxlength="300" minlength="1">
     
 </table>
 <table>
         <td>
             <tr>
-            <input name="Orgainzation" type="text" placeholder="List organization and job title." maxlength="25" minlength="1" required>
+            <input name="Orgainzation" class="inputbox"type="text" placeholder="List organization and job title." maxlength="25" minlength="1" required>
             </tr>    
         </td>
     </table>
