--- a/index_dont_show_auto.html
+++ b/index_dont_show_auto.html
@@ -15,12 +15,12 @@
 <header>
     <!--Information highlighting my professional background with use of headers 1-6 and semantic structuring-->
     <h1 class="heading">Jonathan Whitman</h1>
-    <img src="https://media.licdn.com/dms/image/D4E03AQF4pJy7LogGVw/profile-displayphoto-shrink_400_400/0/1697385113993?e=1708560000&v=beta&t=G5AaUF5CqkVoTvQX3U9USkGxkyd07dzcp_rA6UnlBJc">
+    <img src="https://media.licdn.com/dms/image/D4E03AQF4pJy7LogGVw/profile-displayphoto-shrink_200_200/0/1697385113993?e=1714608000&v=beta&t=Niq3ATQmA7w3Uz0KSSZlDR2iYVB5Sm_wpX6p5xG6wp0">
     <a href="https://www.linkedin.com/in/jonathan-whitman-34a845155/">
         Software Engineer</a>
         
             <p>An experienced IT professional with active Top Secret/SCI clearance and 7 plus years in the field. Skilled in customer relationship, IT service management, network management, server management, security, and information assurance. Also, trained in monitoring and troubleshooting large multiprotocol networks.</p>
-            <section>
+            <section id="TableFormat">
                 <!--List of my interests and what I want to accomplish as a Software Engineer-->
                 <table>
                     <caption id="Highlight">My interests and goals as a Software Engineer</caption>
@@ -51,7 +51,7 @@
 </header>
 <main>          <!--Information about my most current position-->
     <section>
-       <h2 class="heading2">Experience</h2>
+       <h2 class="heading">Experience</h2>
             <h3 class="heading2">IT Automation Engineer</h3>
             <h4 class="heading2">Force99, LLC </h4>
                 <h5 class="heading2">52 Communications Squadron Spangdahlem, Germany</h5> 
@@ -139,7 +139,7 @@
 <table>
         <td>
             <tr>
-            <input name="Orgainzation" class="inputbox"type="text" placeholder="List organization and job title." maxlength="25" minlength="1" required>
+            <input name="Orgainzation" class="inputbox" type="text" placeholder="List organization and job title." maxlength="25" minlength="1" required>
             </tr>    
         </td>
     </table>
