--- a/index_dont_show_auto.html
+++ b/index_dont_show_auto.html
@@ -124,6 +124,7 @@
 </section>
 </main>
 <!--Form portion of my assignment "means of contact if interested"-->
+<form>
 <fieldset>
 <table action="#">
 
